fixed the sidebar alignment and added grey background for submenu

--- a/admin_app/styles/admin.css
+++ b/admin_app/styles/admin.css
@@ -60,9 +60,9 @@ body{
 	text-align: left;
 }
 
-.collapse{
+/* .collapse{
 	padding-left: 20px;
-}
+} */
 
 /* .sidebar-btn > button:hover {
 	background-color: #f0f3f7;
